--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@lit/react": "^1.0.5",
     "lit": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
