--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,10 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.4",
     "lit": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-to-webcomponent": "^2.0.0"
+    "react-router-dom": "^6.26.1",
+    "react-to-webcomponent": "^2.0.0",
+    "vue": "^3.4.38",
+    "vue-router": "^4.2.1",
+    "vuelidate": "^0.7.7",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,6 +31,8 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
