--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@angular/elements": "^18.2.2",
     "axios": "^1.7.4",
     "lit": "^3.2.0",
     "react": "^18.3.1",
