--- a/my-project/package.json
+++ b/my-project/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "lit": "^3.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
